test/backend-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-api-test-svc
spec:
  selector:
    app: backend-api-test
  ports:
  - port: 80
    targetPort: 8080
