test/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-api-test
  template:
    metadata:
      labels:
        app: backend-api-test
    spec:
      containers:
      - name: backend-api
        # CI pipeline'ı bu satırı güncelleyecek
        image: docker.io/omerfeyzioglu/projectwizard-backend-api:develop-5f8a13f
        ports:
        - containerPort: 8080 # .NET'in çalıştığı port
        
        # --- EKSİK OLAN VE HATAYI ÇÖZECEK BLOK ---
        env:
        - name: ConnectionStrings__DefaultConnection 
          valueFrom:
            secretKeyRef:
              name: mssql-test-secret # test namespace'indeki Secret
              key: connectionString
        - name: ASPNETCORE_ENVIRONMENT
          value: Development 
        # --- BLOĞUN SONU ---
